--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
 asgiref==3.7.2
-cloudinary==1.33.0
+cloudinary==1.34.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
-Django==3.2.19
-django-allauth==0.54.0
-gunicorn==20.1.0
+Django==3.2.21
+django-allauth==0.56.1
+gunicorn==21.2.0
 oauthlib==3.2.2
-Pillow==9.5.0
-psycopg2==2.9.6
-PyJWT==2.7.0
+psycopg2==2.9.7
+PyJWT==2.8.0
 python3-openid==3.2.0
-pytz==2023.3
+pytz==2023.3.post1
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
 urllib3==1.26.15
-whitenoise==6.5.0
